@@ -4,6 +4,11 @@ CHANGELOG
 ** For a while this is going to include only breaking changes.
 ** As we slowly transition toward releasing the test engine, this will become a more full fledged changelog.
 
+2022/09/02
+- TestEngine: removed ImGuiTestContext::NavCancel(): same as ->KeyPress(ImGuiKey_Escape);
+  Follow on core lib which is moving away from the NavInput_ semantic, in favor of using ImGuiKey enum
+  for both keys and gamepads actions.
+
 2022/08/25:
 - TestEngine: Changed ItemInfo() functions to never return a NULL pointer anymore.
   If you were testing for NULL pointer, the right test to do now is 'info->ID != 0'.
